# Pennysoftwares

./: .gitignore  PROJECT_SUMMARY.md  README.md  SETUP.md  junit.xml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  run-output.txt  test-all-positive.txt  test-result.txt  test-run.txt  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: e2e-tests.yml
docs/: ARCHITECTURE.md  CI_CD_GUIDE.md  TEST_CASES.md  USER_GUIDE.md
src/: main.py
tests/: test_main.py
tests/data/: testData.ts
tests/fixtures/: pageFixtures.ts
tests/pages/: BasePage.ts  HomePage.ts  LoginPage.ts  SignupPage.ts
tests/specs/: 01-auth-positive.spec.ts  02-auth-negative.spec.ts  03-account-management.spec.ts  04-mobile-responsive.spec.ts
